--- a/skin.aeonmq5.helixmod/changelog.txt
+++ b/skin.aeonmq5.helixmod/changelog.txt
@@ -7,6 +7,7 @@ Improved:  Addon TV.Show.Next.Aired widgets now work for live TV main menu
 Improved:  Addon TV.Show.Next.Aired now requries ver 6.0.10 (minimum) and no longer is run at skin startup
 Improved:  In the music m3u playlist editor dialog, button label has been changed from "CLOSE" to "CLEAN" (when this button is clicked, the list of playlist music files is cleared)
 Fixed:  Recording Preferences dialog window focus issues when PVR client is pvr.npvr (Next PVR)
+Fixed:  Adjusted positions of main menu items so the focused item (wraplist) is centered
 Improved:  On home window, when library status bar is displayed for movies, concerts, and favoristes the label "Movies", "concerts", or "widgets" is displayed as appropriate
 
 
