--- a/skin.aeonmq5.helixmod/changelog.txt
+++ b/skin.aeonmq5.helixmod/changelog.txt
@@ -1,14 +1,24 @@
+[B][COLOR=FFFF8C00]BUILD 6.1.8 - RELEASE DATE 04/18/2015[/COLOR][/B]
+
+Added:  Live TV recordings is now available to be added to the main menu via customize main menu
+Improved:  Now recording/Next recording slide in popup provided for both Live TV-EPG and Live TV-Recordings when set as main menu items
+Improved:  Added MPAA flags for French video
+Fixed:  Multiplex view pand display time brought up wrong dialog window
+Fixed:  Live TV Recordings wide view now has correct focus shading and scrollbar 
+Fixed:  Recently added movies widgets now bring up dialog on click to play/resume/launch cinema experience
+Fixed:  It is now possible to set episode bookmarks for tv shows with multiple episodes per file
+
 [B][COLOR=FFFF8C00]BUILD 6.1.7 - RELEASE DATE 03/05/2015[/COLOR][/B]
 
 Added:  Live TV EPG is now available to be added to the main menu via customize main menu
-Added:  Weather widgets and MyWeather now supports Yahoo! Weather  (current, 36 hour views)
+Added:  Weather widgets and MyWeather now support Yahoo! Weather  (current, 36 hour views)
 Added:  CoverFlow view now available for program addons
 Improved:  Addon TV.Show.Next.Aired widgets now work for live TV main menu
-Improved:  Addon TV.Show.Next.Aired now requries ver 6.0.10 (minimum) and no longer is run at skin startup
+Improved:  Addon TV.Show.Next.Aired now requires ver 6.0.10 (minimum) and no longer is run at skin startup
 Improved:  In the music m3u playlist editor dialog, button label has been changed from "CLOSE" to "CLEAN" (when this button is clicked, the list of playlist music files is cleared)
 Fixed:  Recording Preferences dialog window focus issues when PVR client is pvr.npvr (Next PVR)
 Fixed:  Adjusted positions of main menu items so the focused item (wraplist) is centered
-Improved:  On home window, when library status bar is displayed for movies, concerts, and favoristes the label "Movies", "concerts", or "widgets" is displayed as appropriate
+Improved:  On home window, when library status bar is displayed for movies, concerts, and favorites the label "Movies", "concerts", or "widgets" is displayed as appropriate
 
 
 [B][COLOR=FFFF8C00]BUILD 6.1.6 - RELEASE DATE 02/09/2015[/COLOR][/B]
