--- a/skin.aeonmq5.helixmod/language/English (US)/strings.po
+++ b/skin.aeonmq5.helixmod/language/English (US)/strings.po
@@ -3751,6 +3751,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr "EPG:CHANNEL"
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
@@ -4230,6 +4234,10 @@ msgstr "DELETE GROUP"
 msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
 msgstr "AVAILABLE[CR]GROUPS"
+
+msgctxt "#31997"
+msgid "SEEKING"
+msgstr "SEEKING"
 
 msgctxt "#31999"
 msgid ""
