--- a/skin.aeonmq5.helixmod/language/German/strings.po
+++ b/skin.aeonmq5.helixmod/language/German/strings.po
@@ -3766,6 +3766,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr ""
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr ""
@@ -4244,6 +4248,10 @@ msgstr ""
 
 msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
+msgstr ""
+
+msgctxt "#31997"
+msgid "SEEKING"
 msgstr ""
 
 msgctxt "#31999"
