--- a/skin.aeonmq5.helixmod/language/Portuguese (Brazil)/strings.po
+++ b/skin.aeonmq5.helixmod/language/Portuguese (Brazil)/strings.po
@@ -3753,6 +3753,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr ""
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "USAR ESTOJOS DE PACOTE EXTERNO (DEFINIDO PELO USUÁRIO)"
@@ -4231,6 +4235,10 @@ msgstr ""
 
 msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
+msgstr ""
+
+msgctxt "#31997"
+msgid "SEEKING"
 msgstr ""
 
 msgctxt "#31999"
