--- a/skin.aeonmq5.helixmod/language/Russian/strings.po
+++ b/skin.aeonmq5.helixmod/language/Russian/strings.po
@@ -3762,6 +3762,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr ""
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "ИСПОЛЬЗОВАТЬ ВНЕШНИЙ ПАКЕТ УПАКОВОК МЕДИА (ОПРЕДЕЛЁННЫЙ ПОЛЬЗОВАТЕЛЕМ)"
@@ -4240,6 +4244,10 @@ msgstr ""
 
 msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
+msgstr ""
+
+msgctxt "#31997"
+msgid "SEEKING"
 msgstr ""
 
 msgctxt "#31999"
