--- a/skin.aeonmq5.helixmod/changelog.txt
+++ b/skin.aeonmq5.helixmod/changelog.txt
@@ -1,9 +1,14 @@
-[B][COLOR=FFFF8C00]BUILD 6.1.8 - RELEASE DATE 04/18/2015[/COLOR][/B]
+[B][COLOR=FFFF8C00]BUILD 6.1.9 - RELEASE DATE 05/30/2015[/COLOR][/B]
+Added:  New video view "shelfcase"
+Fixed:  During video playback, SEEKING setting will only display during active Seek
+Fixed:  Additional Isengard GUI mods
+Fixed:  Genre icon issue in Panel View
 
+[B][COLOR=FFFF8C00]BUILD 6.1.8 - RELEASE DATE 04/18/2015[/COLOR][/B]
 Added:  Live TV recordings is now available to be added to the main menu via customize main menu
 Improved:  Now recording/Next recording slide in popup provided for both Live TV-EPG and Live TV-Recordings when set as main menu items
 Improved:  Added MPAA flags for French video
-Fixed:  Multiplex view pand display time brought up wrong dialog window
+Fixed:  Multiplex view panel display time brought up wrong dialog window
 Fixed:  Live TV Recordings wide view now has correct focus shading and scrollbar 
 Fixed:  Recently added movies widgets now bring up dialog on click to play/resume/launch cinema experience
 Fixed:  It is now possible to set episode bookmarks for tv shows with multiple episodes per file
