--- a/skin.aeonmq5.helixmod/language/English (US)/strings.po
+++ b/skin.aeonmq5.helixmod/language/English (US)/strings.po
@@ -3949,8 +3949,8 @@ msgid "BOX BACK"
 msgstr "BOX BACK"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
-msgstr "CARTDRIGE"
+msgid "CARTRIDGE"
+msgstr "CARTRIDGE"
 
 msgctxt "#31927"
 msgid "SCREENSHOT"
