--- a/skin.aeonmq5.helixmod/language/English/strings.po
+++ b/skin.aeonmq5.helixmod/language/English/strings.po
@@ -3950,8 +3950,8 @@ msgid "BOX BACK"
 msgstr "BOX BACK"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
-msgstr "CARTDRIGE"
+msgid "CARTRIDGE"
+msgstr "CARTRIDGE"
 
 msgctxt "#31927"
 msgid "SCREENSHOT"
