--- a/skin.aeonmq5.helixmod/language/Italian/strings.po
+++ b/skin.aeonmq5.helixmod/language/Italian/strings.po
@@ -3955,7 +3955,7 @@ msgid "BOX BACK"
 msgstr "RETRO BOX"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
+msgid "CARTRIDGE"
 msgstr "CARTUCCIA"
 
 msgctxt "#31927"
