--- a/skin.aeonmq5.helixmod/language/Spanish (Argentina)/strings.po
+++ b/skin.aeonmq5.helixmod/language/Spanish (Argentina)/strings.po
@@ -3957,7 +3957,7 @@ msgid "BOX BACK"
 msgstr "PARTE TRASERA DE LA CAJA"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
+msgid "CARTRIDGE"
 msgstr "CARTUCHO"
 
 msgctxt "#31927"
