--- a/skin.aeonmq5.helixmod/language/Thai/strings.po
+++ b/skin.aeonmq5.helixmod/language/Thai/strings.po
@@ -3952,7 +3952,7 @@ msgid "BOX BACK"
 msgstr "หลังกล่อง"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
+msgid "CARTRIDGE"
 msgstr "ตลับ"
 
 msgctxt "#31927"
