--- a/skin.aeonmq5.helixmod/language/Portuguese/strings.po
+++ b/skin.aeonmq5.helixmod/language/Portuguese/strings.po
@@ -423,7 +423,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "GUIA DE TV"
+msgstr "GUIA DE NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1610,7 +1610,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Próximo Episódio"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "Seriados nesse dia"
 
@@ -2031,6 +2031,10 @@ msgstr "OCULTAR BORDA NAS MINIATURAS"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "EXIBIR BOTÃO PARA REINICIAR SKIN (TEMPORÁRIO)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2587,6 +2591,10 @@ msgstr "COLEÇÃO VAZIA!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ADICIONE CONTEÚDO NA OPÇÃO"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
