--- a/skin.aeonmq5.helixmod/language/Chinese/strings.po
+++ b/skin.aeonmq5.helixmod/language/Chinese/strings.po
@@ -1610,7 +1610,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr ""
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr ""
 
@@ -2031,6 +2031,10 @@ msgstr ""
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr ""
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2587,6 +2591,10 @@ msgstr "空系列！"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "添加选项内容"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
