--- a/skin.aeonmq5.helixmod/language/Czech/strings.po
+++ b/skin.aeonmq5.helixmod/language/Czech/strings.po
@@ -420,7 +420,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TELEVIZNÍ PROGRAM"
+msgstr "NEXT AIRED PROGRAM"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1607,7 +1607,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Další epizoda"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "Dnešní seriály"
 
@@ -2028,6 +2028,10 @@ msgstr "SKRÝT OKRAJE NÁHLEDŮ"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "ZOBRAZIT TLAČÍTKO PRO RESET MOTIVU (DOČASNĚ)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2584,6 +2588,10 @@ msgstr "PRÁZDNÁ SBÍRKA!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "V NASTAVENÍ VLOŽTE OBSAH"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
