--- a/skin.aeonmq5.helixmod/language/Danish/strings.po
+++ b/skin.aeonmq5.helixmod/language/Danish/strings.po
@@ -422,7 +422,7 @@ msgstr "BIOGRAFOPLEVELSE"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV GUIDE"
+msgstr "NEXT AIRED GUIDE"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1609,7 +1609,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Næste Afsnit"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr ""
 
@@ -2030,6 +2030,10 @@ msgstr ""
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr ""
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2586,6 +2590,10 @@ msgstr "TOM SAMLING!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "TILFØJ INDHOLD I INDSTILLINGER"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
