--- a/skin.aeonmq5.helixmod/language/English (US)/strings.po
+++ b/skin.aeonmq5.helixmod/language/English (US)/strings.po
@@ -419,7 +419,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV GUIDE"
+msgstr "NEXT AIRED GUIDE"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1606,7 +1606,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Next Episode"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "TV Shows on this day"
 
@@ -1719,8 +1719,8 @@ msgid "General settings"
 msgstr "General settings"
 
 msgctxt "#31376"
-msgid "A HIGH DEFINITION MEDIA ENVIROMENT"
-msgstr "A HIGH DEFINITION MEDIA ENVIROMENT"
+msgid "A HIGH DEFINITION MEDIA ENVIRONMENT"
+msgstr "A HIGH DEFINITION MEDIA ENVIRONMENT"
 
 msgctxt "#31377"
 msgid ""
@@ -2027,6 +2027,10 @@ msgstr "HIDE THE THUMBNAILS BORDERS"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2584,6 +2588,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ADD CONTENT IN OPTION"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "SEASON"
@@ -2606,7 +2614,7 @@ msgstr "MOVE LEFT/RIGHT TO BROWSE"
 
 msgctxt "#31594"
 msgid "CHOOSE A STYLE TO MAIN MENU"
-msgstr "CHOOSE A STYLE TO MAIN MENU"
+msgstr "CHOOSE A STYLE FOR MAIN MENU"
 
 msgctxt "#31595"
 msgid "CHOOSE A COLOR FOR THE PANELS"
