--- a/skin.aeonmq5.helixmod/language/Finnish/strings.po
+++ b/skin.aeonmq5.helixmod/language/Finnish/strings.po
@@ -419,7 +419,7 @@ msgstr "ELOKUVAKOKEMUS"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV-OPAS"
+msgstr "NEXT AIRED-OPAS"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1606,7 +1606,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Seuraava jakso"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "Tämän päivän TV-sarjat"
 
@@ -2027,6 +2027,10 @@ msgstr "PIILOTA NÄYTEKUVIEN KEHYKSET"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "NÄYTÄ ULKOASUN NOLLAUSPAINIKE (VÄLIAIKAINEN)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2583,6 +2587,10 @@ msgstr "TYHJÄ KOKOELMA!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "LISÄÄ SISÄLTÖÄ VAIHTOEHTOON"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
