--- a/skin.aeonmq5.helixmod/language/Galician/strings.po
+++ b/skin.aeonmq5.helixmod/language/Galician/strings.po
@@ -419,7 +419,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "GUÍA DE TV"
+msgstr "GUÍA DE NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1606,7 +1606,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Seguinte Episodio"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "Series de TV neste día"
 
@@ -2027,6 +2027,10 @@ msgstr "AGOCHAR OS BORDOS DAS MINIATURAS"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "AMOSAR BOTÓN PARA RESTABELECER O TEMA (TEMPORALMENTE)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2583,6 +2587,10 @@ msgstr "COLECCIÓN BALEIRA!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ENGADIR O CONTIDO NA OPCIÓN"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
