--- a/skin.aeonmq5.helixmod/language/German/strings.po
+++ b/skin.aeonmq5.helixmod/language/German/strings.po
@@ -431,7 +431,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV GUIDE"
+msgstr "NEXT AIRED GUIDE"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1618,7 +1618,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Nächste Episode"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "TV Serien an diesem Tag"
 
@@ -2039,6 +2039,10 @@ msgstr "VERSTECKE DIE THUMBNAIL ECKEN"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "ZEIGE BUTTON UM DAS SKIN ZURÜCKZUSETZEN (TEMPORÄR)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2595,6 +2599,10 @@ msgstr "LEERES SET!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "INHALT ÜBER OPTIONEN HINZUFÜGEN"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
