--- a/skin.aeonmq5.helixmod/language/Greek/strings.po
+++ b/skin.aeonmq5.helixmod/language/Greek/strings.po
@@ -419,7 +419,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "ΟΔΗΓΟΣ TV"
+msgstr "ΟΔΗΓΟΣ NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1606,7 +1606,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Επόμενο Επεισόδιο"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "Τηλ. Σειρές σήμερα"
 
@@ -2027,6 +2027,10 @@ msgstr "ΑΠΟΚΡΥΨΗ ΤΩΝ ΟΡΙΩΝ ΤΩΝ ΜΙΚΡΟΓΡΑΦΙΩΝ"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "ΕΜΦΑΝΙΣΗ ΠΛΗΚΤΡΟΥ ΓΙΑ ΕΠΑΝΑΦΟΡΑ ΚΕΛΥΦΟΥΣ (ΠΡΟΣΩΡΙΝΟ)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2583,6 +2587,10 @@ msgstr "ΚΕΝΗ ΣΥΛΛΟΓΗ!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ΠΡΟΣΘΗΚΗ ΠΕΡΙΕΧΟΜΕΝΟΥ ΣΤΗΝ ΕΠΙΛΟΓΗ"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
