--- a/skin.aeonmq5.helixmod/language/Hungarian/strings.po
+++ b/skin.aeonmq5.helixmod/language/Hungarian/strings.po
@@ -1606,7 +1606,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Következő Epizód"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr ""
 
@@ -2027,6 +2027,10 @@ msgstr ""
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr ""
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2583,6 +2587,10 @@ msgstr "ÜRES KOLLEKCIÓ!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "TARTALOM HOZZÁADÁSA"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
