--- a/skin.aeonmq5.helixmod/language/Icelandic/strings.po
+++ b/skin.aeonmq5.helixmod/language/Icelandic/strings.po
@@ -1607,7 +1607,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Næsti þáttur"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "Sjónvarpsþættir þennan dag"
 
@@ -2028,6 +2028,10 @@ msgstr "FELA RAMMA UM SMÁMYNDIR"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "SÝNA TAKA TIL AÐ ENDURSETJA ÚTLIT (TÍMABUNDIÐ)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2584,6 +2588,10 @@ msgstr "TÆMA SAFN"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "BÆTA INNIHALDI "
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
