--- a/skin.aeonmq5.helixmod/language/Japanese/strings.po
+++ b/skin.aeonmq5.helixmod/language/Japanese/strings.po
@@ -1607,7 +1607,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "次のエピソード"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr ""
 
@@ -2028,6 +2028,10 @@ msgstr ""
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr ""
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2584,6 +2588,10 @@ msgstr "コレクションは空です！"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr ""
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
