--- a/skin.aeonmq5.helixmod/language/Lithuanian/strings.po
+++ b/skin.aeonmq5.helixmod/language/Lithuanian/strings.po
@@ -425,7 +425,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV PROGRAMA"
+msgstr "NEXT AIRED PROGRAMA"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1612,7 +1612,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Kitas epizodas"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "TV laidos šiandien"
 
@@ -2033,6 +2033,10 @@ msgstr "SLĖPTI MINIATIŪRŲ KRAŠTINES"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "RODYTI TEMOS ATSTATYMO MYGTUKĄ (LAIKINAI)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2589,6 +2593,10 @@ msgstr "TUŠČIA KOLEKCIJA!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ĮTRAUKTI TURINĮ SU PASIRINKIMU"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
