--- a/skin.aeonmq5.helixmod/language/Russian/strings.po
+++ b/skin.aeonmq5.helixmod/language/Russian/strings.po
@@ -427,7 +427,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "ТВ ПРОГРАММА"
+msgstr "NEXT AIRED ПРОГРАММА"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1614,7 +1614,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "Следующий эпизод"
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr "Сериалы сегодня"
 
@@ -2035,6 +2035,10 @@ msgstr "СКРЫТЬ ГРАНИЦЫ МИНИАТЮР"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "ПОКАЗАТЬ КНОПКУ ДЛЯ СБРОСА ОБОЛОЧКИ (ВРЕМЕННО)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2591,6 +2595,10 @@ msgstr "ПУСТАЯ КОЛЛЕКЦИЯ!"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ДОБАВИТЬ СОДЕРЖАНИЕ В ОПЦИЮ"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
