--- a/skin.aeonmq5.helixmod/language/Thai/strings.po
+++ b/skin.aeonmq5.helixmod/language/Thai/strings.po
@@ -1606,7 +1606,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr "ตอนถัดไป"
 
-msgctxt "#31448"
+msgctxt "#33448"
 msgid "TV Shows at this day"
 msgstr "รายการทีวี ในวันนี้"
 
@@ -2027,6 +2027,10 @@ msgstr "ซ่อนกรอบของรูปย่อ"
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "แสดงปุ่มสำหรับคืนค่าสกิน(ชั่วคราว)"
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2583,6 +2587,10 @@ msgstr "ล้างคอลเลคชัน"
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "เพิ่มเนื้อหาในตัวเลือก"
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
