--- a/skin.aeonmq5.helixmod/language/Turkish/strings.po
+++ b/skin.aeonmq5.helixmod/language/Turkish/strings.po
@@ -421,7 +421,7 @@ msgstr "SİNEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV REHBERI"
+msgstr "NEXT AIRED REHBERI"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
@@ -1608,7 +1608,7 @@ msgctxt "#31347"
 msgid "Next Episode"
 msgstr ""
 
-msgctxt "#31448"
+msgctxt "#31348"
 msgid "TV Shows at this day"
 msgstr ""
 
@@ -2029,6 +2029,10 @@ msgstr ""
 msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr ""
+
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
 
 msgctxt "#31449"
 msgid "SOLO MODE"
@@ -2585,6 +2589,10 @@ msgstr ""
 msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr ""
+
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
 
 msgctxt "#31589"
 msgid "SEASON"
